create main section with photo and buttons

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Студія</li>
-          <li>Портфоліо</li>
-          <li>Контакти</li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
@@ -23,8 +23,67 @@
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
-    <!-- Main -->
+    <!-- Main Portfolio-->
     <main>
+      <section>
+        <h1>Портфоліо</h1>
+        <!-- Filters -->
+        <ul>
+          <li><button type="button">Усі</button></li>
+          <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+        </ul>
+        <!-- Projects -->
+        <ul>
+          <li>
+            <img src="./images/portfolio/img1.jpeg" alt="Портфоліо фото 1" width="370" />
+            <h2>Технокряк</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img2.jpeg" alt="Портфоліо фото 2" width="370" />
+            <h2>Постер New Orlean vs Golden Star</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img3.jpeg" alt="Портфоліо фото 3" width="370" />
+            <h2>Ресторан Seafood</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img4.jpeg" alt="Портфоліо фото 4" width="370" />
+            <h2>Проєкт Prime</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img5.jpeg" alt="Портфоліо фото 5" width="370" />
+            <h2>Проєкт Boxes</h2>
+            <p>Додаток</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img6.jpeg" alt="Портфоліо фото 6" width="370" />
+            <h2>Inspiration has no Borders</h2>
+            <p>Веб-сайт</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img7.jpeg" alt="Портфоліо фото 7" width="370" />
+            <h2>Видання Limited Edition</h2>
+            <p>Дизайн</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img8.jpeg" alt="Портфоліо фото 8" width="370" />
+            <h2>Проєкт LAB</h2>
+            <p>Маркетинг</p>
+          </li>
+          <li>
+            <img src="./images/portfolio/img9.jpeg" alt="Портфоліо фото 9" width="370" />
+            <h2>Growing Business</h2>
+            <p>Додаток</p>
+          </li>
+        </ul>
+      </section>
     </main>
     <!-- Footer -->
     <footer>
