--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Верхня лінія -->
     <header>
       <nav>
-        <a href="/">WebStudio</a>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li>Студія</li>
-          <li>Портфоліо</li>
-          <li>Контакти</li>
+          <li><a href="./index.html">Студія</a></li>
+          <li><a href="./portfolio.html">Портфоліо</a></li>
+          <li><a href="">Контакти</a></li>
         </ul>
       </nav>
       <ul>
