--- a/portfolio.html
+++ b/portfolio.html
@@ -38,47 +38,83 @@
         <!-- Projects -->
         <ul>
           <li>
-            <img src="./images/portfolio/img1.jpeg" alt="Портфоліо фото 1" width="370" />
+            <img
+              src="./images/portfolio/img1.jpeg"
+              alt="Портфоліо фото 1"
+              width="370"
+            />
             <h2>Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/portfolio/img2.jpeg" alt="Портфоліо фото 2" width="370" />
+            <img
+              src="./images/portfolio/img2.jpeg"
+              alt="Портфоліо фото 2"
+              width="370"
+            />
             <h2>Постер New Orlean vs Golden Star</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/portfolio/img3.jpeg" alt="Портфоліо фото 3" width="370" />
+            <img
+              src="./images/portfolio/img3.jpeg"
+              alt="Портфоліо фото 3"
+              width="370"
+            />
             <h2>Ресторан Seafood</h2>
             <p>Додаток</p>
           </li>
           <li>
-            <img src="./images/portfolio/img4.jpeg" alt="Портфоліо фото 4" width="370" />
+            <img
+              src="./images/portfolio/img4.jpeg"
+              alt="Портфоліо фото 4"
+              width="370"
+            />
             <h2>Проєкт Prime</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/portfolio/img5.jpeg" alt="Портфоліо фото 5" width="370" />
+            <img
+              src="./images/portfolio/img5.jpeg"
+              alt="Портфоліо фото 5"
+              width="370"
+            />
             <h2>Проєкт Boxes</h2>
             <p>Додаток</p>
           </li>
           <li>
-            <img src="./images/portfolio/img6.jpeg" alt="Портфоліо фото 6" width="370" />
+            <img
+              src="./images/portfolio/img6.jpeg"
+              alt="Портфоліо фото 6"
+              width="370"
+            />
             <h2>Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
-            <img src="./images/portfolio/img7.jpeg" alt="Портфоліо фото 7" width="370" />
+            <img
+              src="./images/portfolio/img7.jpeg"
+              alt="Портфоліо фото 7"
+              width="370"
+            />
             <h2>Видання Limited Edition</h2>
             <p>Дизайн</p>
           </li>
           <li>
-            <img src="./images/portfolio/img8.jpeg" alt="Портфоліо фото 8" width="370" />
+            <img
+              src="./images/portfolio/img8.jpeg"
+              alt="Портфоліо фото 8"
+              width="370"
+            />
             <h2>Проєкт LAB</h2>
             <p>Маркетинг</p>
           </li>
           <li>
-            <img src="./images/portfolio/img9.jpeg" alt="Портфоліо фото 9" width="370" />
+            <img
+              src="./images/portfolio/img9.jpeg"
+              alt="Портфоліо фото 9"
+              width="370"
+            />
             <h2>Growing Business</h2>
             <p>Додаток</p>
           </li>
