--- a/index.html
+++ b/index.html
@@ -5,29 +5,44 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Студия</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Верхня лінія -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-header">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li class="nav-list-item"><a href="./index.html">Студія</a></li>
+          <li class="nav-list-item">
+            <a href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="nav-list-item"><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-list">
+        <li class="contact-list-item">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-list-item">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <!-- Main content -->
     <main>
-      <!-- Шапка -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+      <!-- Hero -->
+      <section class="hero">
+        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+        <button type="button" class="button-order">Замовити послугу</button>
       </section>
       <!-- Особливості -->
       <section>
@@ -35,19 +50,30 @@
         <ul>
           <li>
             <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
           </li>
           <li>
             <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
           </li>
           <li>
             <h3>ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
           </li>
           <li>
             <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
           </li>
         </ul>
       </section>
@@ -89,7 +115,7 @@
               width="270"
             />
             <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <p lang="en">Product Designer</p>
           </li>
           <li>
             <img
@@ -98,7 +124,7 @@
               width="270"
             />
             <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <p lang="en">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -107,7 +133,7 @@
               width="270"
             />
             <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <p lang="en">Marketing</p>
           </li>
           <li>
             <img
@@ -116,17 +142,23 @@
               width="270"
             />
             <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <p lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Підвал -->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-footer">Studio</span></a
+      >
       <address>
         <ul>
-          <li><a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9">м. Київ, пр-т Лесі Українки, 26</a></li>
+          <li>
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
