--- a/portfolio.html
+++ b/portfolio.html
@@ -1,26 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- Header -->
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студія</a></li>
-          <li><a href="./portfolio.html">Портфоліо</a></li>
-          <li><a href="">Контакти</a></li>
+    <header class="header">
+      <nav class="nav">
+        <a href="./index.html" class="logo"
+          >Web<span class="logo-header">Studio</span></a
+        >
+        <ul class="nav-list">
+          <li class="nav-list-item"><a href="./index.html">Студія</a></li>
+          <li class="nav-list-item">
+            <a href="./portfolio.html">Портфоліо</a>
+          </li>
+          <li class="nav-list-item"><a href="">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="contact-list">
+        <li class="contact-list-item">
+          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="contact-list-item">
+          <a href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
     <!-- Main Portfolio-->
@@ -52,7 +66,7 @@
               alt="Портфоліо фото 2"
               width="370"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
+            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -61,7 +75,7 @@
               alt="Портфоліо фото 3"
               width="370"
             />
-            <h2>Ресторан Seafood</h2>
+            <h2>Ресторан <span lang="en">Seafood</span></h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -70,7 +84,7 @@
               alt="Портфоліо фото 4"
               width="370"
             />
-            <h2>Проєкт Prime</h2>
+            <h2>Проєкт <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -79,7 +93,7 @@
               alt="Портфоліо фото 5"
               width="370"
             />
-            <h2>Проєкт Boxes</h2>
+            <h2>Проєкт <span lang="en">Boxes</span></h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -88,7 +102,7 @@
               alt="Портфоліо фото 6"
               width="370"
             />
-            <h2>Inspiration has no Borders</h2>
+            <h2 lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -97,7 +111,7 @@
               alt="Портфоліо фото 7"
               width="370"
             />
-            <h2>Видання Limited Edition</h2>
+            <h2>Видання <span lang="en">Limited Edition</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -106,7 +120,7 @@
               alt="Портфоліо фото 8"
               width="370"
             />
-            <h2>Проєкт LAB</h2>
+            <h2>Проєкт <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -115,7 +129,7 @@
               alt="Портфоліо фото 9"
               width="370"
             />
-            <h2>Growing Business</h2>
+            <h2 lang="en">Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
@@ -123,7 +137,9 @@
     </main>
     <!-- Footer -->
     <footer>
-      <a href="/">WebStudio</a>
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-footer">Studio</span></a
+      >
       <address>
         <ul>
           <li>
