add classes and styles to part of main content

--- a/index.html
+++ b/index.html
@@ -44,42 +44,42 @@
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
         <button type="button" class="button-order">Замовити послугу</button>
       </section>
-      <!-- Особливості -->
-      <section>
-        <h2>Особливості</h2>
-        <ul>
+      <!-- Speciality -->
+      <section class="speciality">
+        <h2 class="speciality-title">Особливості</h2>
+        <ul class="speciality-list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
+            <h3 class="speciality-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <p class="speciality-description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
+            <h3 class="speciality-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <p class="speciality-description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
+            <h3 class="speciality-list-title">ПЛАНУВАННЯ</h3>
+            <p class="speciality-description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
+            <h3 class="speciality-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <p class="speciality-description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <!-- Чим ми займаємося -->
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <!-- What we do-->
+      <section class="what-we-do">
+        <h2 class="wwd-title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
