--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <!-- Верхня лінія -->
+    <!-- Header -->
     <header class="header">
       <nav class="nav">
         <a href="./index.html" class="logo"
@@ -104,63 +104,63 @@
           </li>
         </ul>
       </section>
-      <!-- Наша команда -->
-      <section>
-        <h2>Наша команда</h2>
+      <!-- Our team-->
+      <section class="team">
+        <h2 class="team-title">Наша команда</h2>
         <ul>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img1.jpeg"
               alt="усміхнений темноволосий молодий чоловік з бородою в бордовій сорочці та окулярах"
               width="270"
             />
-            <h3>Ігор Дем'яненко</h3>
-            <p lang="en">Product Designer</p>
+            <h3 class="team-member-name">Ігор Дем'яненко</h3>
+            <p lang="en" class="team-member-job">Product Designer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img2.jpeg"
               alt="усміхнена молода світловолоса дівчина в чорному піджаці та окулярах"
               width="270"
             />
-            <h3>Ольга Рєпіна</h3>
-            <p lang="en">Frontend Developer</p>
+            <h3 class="team-member-name">Ольга Рєпіна</h3>
+            <p lang="en" class="team-member-job">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img3.jpeg"
               alt="усміхнений молодий чоловік в блакитній сорочці"
               width="270"
             />
-            <h3>Микола Тарасов</h3>
-            <p lang="en">Marketing</p>
+            <h3 class="team-member-name">Микола Тарасов</h3>
+            <p lang="en" class="team-member-job">Marketing</p>
           </li>
-          <li>
+          <li class="team-member">
             <img
               src="./images/img4.jpeg"
               alt="темноволосий молодий чоловік з бородою в чорній футболці та окулярах"
               width="270"
             />
-            <h3>Михайло Єрмаков</h3>
-            <p lang="en">UI Designer</p>
+            <h3 class="team-member-name">Михайло Єрмаков</h3>
+            <p lang="en" class="team-member-job">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <!-- Підвал -->
-    <footer>
+    <!-- Footer -->
+    <footer class="footer">
       <a href="./index.html" class="logo"
         >Web<span class="logo-footer">Studio</span></a
       >
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
