--- a/portfolio.html
+++ b/portfolio.html
@@ -136,19 +136,19 @@
       </section>
     </main>
     <!-- Footer -->
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo"
         >Web<span class="logo-footer">Studio</span></a
       >
-      <address>
-        <ul>
-          <li>
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+      <address class="address">
+        <ul class="address-list">
+          <li class="address-item">
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="contact-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
