change styles for main page

--- a/index.html
+++ b/index.html
@@ -49,27 +49,27 @@
         <h2 class="speciality-title">Особливості</h2>
         <ul class="speciality-list">
           <li>
-            <h3 class="speciality-list-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="speciality-list-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="speciality-description">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h3 class="speciality-list-title">ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="speciality-list-title title">ПУНКТУАЛЬНІСТЬ</h3>
             <p class="speciality-description">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h3 class="speciality-list-title">ПЛАНУВАННЯ</h3>
+            <h3 class="speciality-list-title title">ПЛАНУВАННЯ</h3>
             <p class="speciality-description">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h3 class="speciality-list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="speciality-list-title title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p class="speciality-description">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
@@ -79,7 +79,7 @@
       </section>
       <!-- What we do-->
       <section class="what-we-do">
-        <h2 class="wwd-title">Чим ми займаємося</h2>
+        <h2 class="wwd-title title">Чим ми займаємося</h2>
         <ul>
           <li>
             <img
@@ -106,7 +106,7 @@
       </section>
       <!-- Our team-->
       <section class="team">
-        <h2 class="team-title">Наша команда</h2>
+        <h2 class="team-title title">Наша команда</h2>
         <ul>
           <li class="team-member">
             <img
@@ -114,7 +114,7 @@
               alt="усміхнений темноволосий молодий чоловік з бородою в бордовій сорочці та окулярах"
               width="270"
             />
-            <h3 class="team-member-name">Ігор Дем'яненко</h3>
+            <h3 class="team-member-name title">Ігор Дем'яненко</h3>
             <p lang="en" class="team-member-job">Product Designer</p>
           </li>
           <li class="team-member">
@@ -123,7 +123,7 @@
               alt="усміхнена молода світловолоса дівчина в чорному піджаці та окулярах"
               width="270"
             />
-            <h3 class="team-member-name">Ольга Рєпіна</h3>
+            <h3 class="team-member-name title">Ольга Рєпіна</h3>
             <p lang="en" class="team-member-job">Frontend Developer</p>
           </li>
           <li class="team-member">
@@ -132,7 +132,7 @@
               alt="усміхнений молодий чоловік в блакитній сорочці"
               width="270"
             />
-            <h3 class="team-member-name">Микола Тарасов</h3>
+            <h3 class="team-member-name title">Микола Тарасов</h3>
             <p lang="en" class="team-member-job">Marketing</p>
           </li>
           <li class="team-member">
@@ -141,7 +141,7 @@
               alt="темноволосий молодий чоловік з бородою в чорній футболці та окулярах"
               width="270"
             />
-            <h3 class="team-member-name">Михайло Єрмаков</h3>
+            <h3 class="team-member-name title">Михайло Єрмаков</h3>
             <p lang="en" class="team-member-job">UI Designer</p>
           </li>
         </ul>
@@ -155,12 +155,16 @@
       <address class="address">
         <ul class="address-list">
           <li class="address-item">
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-list-item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-list-item">
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
