--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
         </li>
       </ul>
     </header>
-    <!-- Main Portfolio-->
+    <!-- Main -->
     <main>
       <section>
         <h1>Портфоліо</h1>
@@ -57,7 +57,7 @@
               alt="Портфоліо фото 1"
               width="370"
             />
-            <h2>Технокряк</h2>
+            <h2 class="title">Технокряк</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -66,7 +66,7 @@
               alt="Портфоліо фото 2"
               width="370"
             />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -75,7 +75,7 @@
               alt="Портфоліо фото 3"
               width="370"
             />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
+            <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -84,7 +84,7 @@
               alt="Портфоліо фото 4"
               width="370"
             />
-            <h2>Проєкт <span lang="en">Prime</span></h2>
+            <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -93,7 +93,7 @@
               alt="Портфоліо фото 5"
               width="370"
             />
-            <h2>Проєкт <span lang="en">Boxes</span></h2>
+            <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
             <p>Додаток</p>
           </li>
           <li>
@@ -102,7 +102,7 @@
               alt="Портфоліо фото 6"
               width="370"
             />
-            <h2 lang="en">Inspiration has no Borders</h2>
+            <h2 class="title" lang="en">Inspiration has no Borders</h2>
             <p>Веб-сайт</p>
           </li>
           <li>
@@ -111,7 +111,7 @@
               alt="Портфоліо фото 7"
               width="370"
             />
-            <h2>Видання <span lang="en">Limited Edition</span></h2>
+            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
             <p>Дизайн</p>
           </li>
           <li>
@@ -120,7 +120,7 @@
               alt="Портфоліо фото 8"
               width="370"
             />
-            <h2>Проєкт <span lang="en">LAB</span></h2>
+            <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
             <p>Маркетинг</p>
           </li>
           <li>
@@ -129,7 +129,7 @@
               alt="Портфоліо фото 9"
               width="370"
             />
-            <h2 lang="en">Growing Business</h2>
+            <h2 class="title" lang="en">Growing Business</h2>
             <p>Додаток</p>
           </li>
         </ul>
@@ -143,12 +143,16 @@
       <address class="address">
         <ul class="address-list">
           <li class="address-item">
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" 
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
-          <li class="contact-list-item"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="contact-list-item"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="contact-list-item">
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="contact-list-item">
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
