--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <!-- Header -->
-        <header class="header">
+    <header class="header">
       <nav class="nav">
         <a href="./index.html" class="logo"
           >Web<span class="logo-header">Studio</span></a
@@ -39,98 +39,102 @@
     </header>
     <!-- Main -->
     <main>
-      <section>
-        <h1>Портфоліо</h1>
+      <section class="projects">
         <!-- Filters -->
-        <ul>
-          <li><button type="button">Усі</button></li>
-          <li><button type="button">Веб-сайти</button></li>
-          <li><button type="button">Додатки</button></li>
-          <li><button type="button">Дизайн</button></li>
-          <li><button type="button">Маркетинг</button></li>
+        <ul class="filters">
+          <li><button type="button" class="filter">Усі</button></li>
+          <li><button type="button" class="filter">Веб-сайти</button></li>
+          <li><button type="button" class="filter">Додатки</button></li>
+          <li><button type="button" class="filter">Дизайн</button></li>
+          <li><button type="button" class="filter">Маркетинг</button></li>
         </ul>
         <!-- Projects -->
-        <ul>
-          <li>
+        <h1>Портфоліо</h1>
+        <ul class="project-list">
+          <li class="project-item">
             <img
               src="./images/portfolio/img1.jpeg"
               alt="Портфоліо фото 1"
               width="370"
             />
             <h2 class="title">Технокряк</h2>
-            <p>Веб-сайт</p>
+            <p class="project-example">Веб-сайт</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img2.jpeg"
               alt="Портфоліо фото 2"
               width="370"
             />
-            <h2 class="title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <h2 class="title">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="project-example">Дизайн</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img3.jpeg"
               alt="Портфоліо фото 3"
               width="370"
             />
             <h2 class="title">Ресторан <span lang="en">Seafood</span></h2>
-            <p>Додаток</p>
+            <p class="project-example">Додаток</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img4.jpeg"
               alt="Портфоліо фото 4"
               width="370"
             />
             <h2 class="title">Проєкт <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <p class="project-example">Маркетинг</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img5.jpeg"
               alt="Портфоліо фото 5"
               width="370"
             />
             <h2 class="title">Проєкт <span lang="en">Boxes</span></h2>
-            <p>Додаток</p>
+            <p class="project-example">Додаток</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img6.jpeg"
               alt="Портфоліо фото 6"
               width="370"
             />
             <h2 class="title" lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="project-example">Веб-сайт</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img7.jpeg"
               alt="Портфоліо фото 7"
               width="370"
             />
-            <h2 class="title">Видання <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
+            <h2 class="title">
+              Видання <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="project-example">Дизайн</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img8.jpeg"
               alt="Портфоліо фото 8"
               width="370"
             />
             <h2 class="title">Проєкт <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
+            <p class="project-example">Маркетинг</p>
           </li>
-          <li>
+          <li class="project-item">
             <img
               src="./images/portfolio/img9.jpeg"
               alt="Портфоліо фото 9"
               width="370"
             />
             <h2 class="title" lang="en">Growing Business</h2>
-            <p>Додаток</p>
+            <p class="project-example">Додаток</p>
           </li>
         </ul>
       </section>
