--- a/index.html
+++ b/index.html
@@ -17,23 +17,27 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo"
+        <a href="./index.html" class="logo link"
           >Web<span class="logo-header">Studio</span></a
         >
-        <ul class="nav-list">
-          <li class="nav-list-item"><a href="./index.html">Студія</a></li>
+        <ul class="nav-list list">
           <li class="nav-list-item">
-            <a href="./portfolio.html">Портфоліо</a>
+            <a href="./index.html" class="link">Студія</a>
           </li>
-          <li class="nav-list-item"><a href="">Контакти</a></li>
+          <li class="nav-list-item">
+            <a href="./portfolio.html" class="link">Портфоліо</a>
+          </li>
+          <li class="nav-list-item"><a href="" class="link">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="contact-list">
+      <ul class="contact-list list">
         <li class="contact-list-item">
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a href="mailto:info@devstudio.com" class="link"
+            >info@devstudio.com</a
+          >
         </li>
         <li class="contact-list-item">
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
+          <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -47,7 +51,7 @@
       <!-- Speciality -->
       <section class="speciality">
         <h2 class="speciality-title">Особливості</h2>
-        <ul class="speciality-list">
+        <ul class="speciality-list list">
           <li>
             <h3 class="speciality-list-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p class="speciality-description">
@@ -80,7 +84,7 @@
       <!-- What we do-->
       <section class="what-we-do">
         <h2 class="wwd-title title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="list">
           <li>
             <img
               src="./images/box1.jpeg"
@@ -107,7 +111,7 @@
       <!-- Our team-->
       <section class="team">
         <h2 class="team-title title">Наша команда</h2>
-        <ul>
+        <ul class="list">
           <li class="team-member">
             <img
               src="./images/img1.jpeg"
@@ -149,21 +153,23 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"
+      <a href="./index.html" class="logo link"
         >Web<span class="logo-footer">Studio</span></a
       >
       <address class="address">
-        <ul class="address-list">
+        <ul class="address-list list">
           <li class="address-item">
-            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
+            <a href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9" class="link"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
           <li class="contact-list-item">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link"
+              >info@devstudio.com</a
+            >
           </li>
           <li class="contact-list-item">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
