--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo link"
+        <a href="./index.html" class="logo"
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="nav-list list">
@@ -50,7 +50,7 @@
       </section>
       <!-- Speciality -->
       <section class="speciality">
-        <h2 class="speciality-title">Особливості</h2>
+        <h2 hidden class="speciality-title">Особливості</h2>
         <ul class="speciality-list list">
           <li>
             <h3 class="speciality-list-title title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -153,7 +153,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
+      <a href="./index.html" class="logo"
         >Web<span class="logo-footer">Studio</span></a
       >
       <address class="address">
