--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!-- Header -->
     <header class="header">
       <nav class="nav">
-        <a href="./index.html" class="logo link"
+        <a href="./index.html" class="logo"
           >Web<span class="logo-header">Studio</span></a
         >
         <ul class="nav-list list">
@@ -53,7 +53,7 @@
           <li><button type="button" class="filter">Маркетинг</button></li>
         </ul>
         <!-- Projects -->
-        <h1>Портфоліо</h1>
+        <h1 hidden>Портфоліо</h1>
         <ul class="project-list list">
           <li class="project-item">
             <img
@@ -145,7 +145,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"
+      <a href="./index.html" class="logo"
         >Web<span class="logo-footer">Studio</span></a
       >
       <address class="address">
