--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         >
         <ul class="nav-list list">
           <li class="nav-list-item">
-            <a href="./index.html" class="link">Студія</a>
+            <a href="./index.html" class="link current">Студія</a>
           </li>
           <li class="nav-list-item">
             <a href="./portfolio.html" class="link">Портфоліо</a>
