--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
             <a href="./index.html" class="link">Студія</a>
           </li>
           <li class="nav-list-item">
-            <a href="./portfolio.html" class="link">Портфоліо</a>
+            <a href="./portfolio.html" class="link current">Портфоліо</a>
           </li>
           <li class="nav-list-item"><a href="" class="link">Контакти</a></li>
         </ul>
